updated portfolio css in order to have images align correctly at 640px view

--- a/assets/css/style_portfolio.css
+++ b/assets/css/style_portfolio.css
@@ -25,7 +25,6 @@
     border-width: 1px;
     overflow: auto;
 }
-
 #headline_name {
     margin: 0 auto;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -58,53 +57,7 @@
     padding-right: 25px;
     padding-bottom: 10px;
     text-align: center;
-    /* float: left;
-    position: absolute;
-    left: 10%; */
 }
-
-@media only screen and (max-width: 640px) {
-    .headline {
-    display: none;
-}
-    #headline_name_2{
-        width: 100%;
-    }
-    #headline_about_2 {
-        width: 33%;
-    }
-    #headline_portfolio_2 {
-        width: 33%;
-    }
-    #headline_contact_2 {
-        width: 33%;
-    }
-}
-@media only screen and (min-width: 641px) {
-    #headline_about_2 {
-        display: none;
-    }
-    #headline_portfolio_2 {
-        display: none;
-    }
-    #headline_contact_2 {
-        display: none;
-    }
-    .headline_2 {
-        display: none;
-    }
-    #headline_name_2{
-        display: none;
-    }
-
-    
-}
-
-/* .headlin_content {
-    width: 960px;
-    margin: 0 auto;
-} */
-
 #headline_about {
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;;
@@ -139,7 +92,6 @@
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;;
     padding-top: 15px;
-    /* float: left; */
     position: relative;
     left: 37%;
     margin-right: 15px;
@@ -147,11 +99,9 @@
 }
 #headline_portfolio_2 {
     margin-top: 10px;
-
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;;
     padding-top: 15px;
-    /* float: left; */
     position: relative;
     left: 39%;
     margin-right: 15px;
@@ -162,26 +112,46 @@
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;;
     padding-top: 15px;
-    /* float: left; */
     position: relative;
     left: 41%;
     margin-right: 15px;
 }
-
-.article {
-    border-style: solid;
-    border-width: 1px;
-    border-color: #cccccc;
-    clear: both;
-    width: 80%;
-    margin: 0 auto;
-    background-color:#ffffff;
-    padding: 20px; 
-    overflow: auto;
-    margin-top: 5%;
-    margin-bottom: 100%;
+@media only screen and (max-width: 640px) {
+    .headline {
+    display: none;
 }
-/* main articl styling */
+    #headline_name_2{
+        width: 100%;
+    }
+    #headline_about_2 {
+        width: 33%;
+    }
+    #headline_portfolio_2 {
+        width: 33%;
+    }
+    #headline_contact_2 {
+        width: 33%;
+    }
+}
+@media only screen and (min-width: 641px) {
+    #headline_about_2 {
+        display: none;
+    }
+    #headline_portfolio_2 {
+        display: none;
+    }
+    #headline_contact_2 {
+        display: none;
+    }
+    .headline_2 {
+        display: none;
+    }
+    #headline_name_2{
+        display: none;
+    }
+}
+
+/* main article stylings */
 .article {
     border-style: solid;
     border-width: 1px;
@@ -192,6 +162,8 @@
     background-color:#ffffff;
     padding: 20px; 
     overflow: auto;
+    margin-top: 3%;
+    margin-bottom: 100%;
 }
 body {
     background-image: url("../images/concrete-texture.png");
@@ -335,6 +307,206 @@ body {
     position: absolute;
     top: 435px;
 }
+
+
+
+
+.image_1_2 {
+    clear: both;
+    z-index: 1;
+    width: 200px;
+    height: 100px;
+    margin-top: 20px;
+}
+.hangman_body_2 {
+    clear: both;
+    width: 150px;
+    text-align: center;
+    background-color: #4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #ffffff;
+    padding: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 80px;
+    margin-bottom: 25px;
+    margin-right: 25px;
+    float: left;
+    position: absolute;
+    z-index: 2;
+}
+.image_2_2 {
+    width: 200px;
+    height: 100px;
+    margin-top: 20px;
+    position: absolute;
+    left: 50%;
+    top: 19%;
+    z-index: 1;
+}
+.RPG_body_2 {
+    clear: both;
+    width: 150px;
+    text-align: center;
+    background-color: #4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #ffffff;
+    padding: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 50px;
+    margin-bottom: 25px;
+    position: absolute;
+    left: 50%;
+    top: 21.85%;
+    float: left;
+    z-index: 2;
+}
+.image_3_2 {
+    width: 200px;
+    height: 100px;
+    margin-top: 20px;
+}
+.trivia_body_2 { 
+    clear: both;
+    width: 150px;
+    clear: both;
+    text-align: center;
+    background-color: #4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #ffffff;
+    padding: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    margin-right: 25px;
+    float: left;
+    position: absolute;
+    top: 36%;
+}
+.image_4_2 {
+    width: 200px;
+    height: 100px;
+    margin-top: 20px;
+    position: absolute;
+    left: 50%;
+    top: 31%;
+    z-index: 1;
+}
+.rutgers_body_2 {
+    clear: both;
+    width: 150px;
+    text-align: center;
+    background-color: #4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #ffffff;
+    padding: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    position: absolute;
+    left: 50%;
+    top: 36%;
+    float: left;
+    z-index: 2;
+}
+.image_5_2 {
+    width: 200px;
+    height: 100px;
+    margin-top: 20px;
+}
+.rock_body_2 {
+    clear: both;
+    width: 150px;
+    text-align: center;
+    clear: both;
+    background-color: #4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #ffffff;
+    padding: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    position: absolute;
+    top: 48%;
+}
+
+
+
+@media only screen and (max-width: 640px) {
+   .hangman_body {
+       display: none;
+   }
+   .image_1 {
+    display: none;
+}
+.RPG_body {
+    display: none;
+}
+.image_2 {
+    display: none;
+}
+.trivia_body {
+    display: none;
+}
+.image_3 {
+    display: none;
+}
+.rutgers_body {
+    display: none;
+}
+.image_4 {
+    display: none;
+}
+.rock_body {
+    display: none;
+}
+.image_5 {
+    display: none;
+}
+}
+@media only screen and (min-width: 641px) {
+        .hangman_body_2 {
+            display: none;
+        }
+        .image_1_2 {
+         display: none;
+     }
+     .RPG_body_2 {
+         display: none;
+     }
+     .image_2_2 {
+         display: none;
+     }
+     .trivia_body_2 {
+         display: none;
+     }
+     .image_3_2 {
+         display: none;
+     }
+     .rutgers_body_2 {
+         display: none;
+     }
+     .image_4_2 {
+         display: none;
+     }
+     .rock_body_2 {
+         display: none;
+     }
+     .image_5_2 {
+         display: none;
+     }
+         
+}
+
+
+
+
+
+
 /* footer stylings */
 div.sticky {
     clear: both;
